--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="stylesheet" href="main.css"> 
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -16,7 +17,8 @@
     <title>React App</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div class='main-container'>
+      <div id="root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -26,6 +28,7 @@
 
       To begin the development, run `npm start`.
       To create a production bundle, use `npm run build`.
-    -->
+    --><footer class="footer col-12">a J. Naeem Gitonga work <a href='mailto:blackb8r@gmail.com'>Support</a> </footer>
+    </div>
   </body>
 </html>
